fixtures/invalid/module-boundary-direct/src/features/tasks/database/client.ts
export const db = { kind: "fixture" };
